dashboards margins and gaps fixed in mobile view

--- a/src/styles/dailyForecast.css
+++ b/src/styles/dailyForecast.css
@@ -14,7 +14,7 @@
 
 @media (max-width: 768px) {
   .daily-forecast {
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.3rem;
   }
 }
 
@@ -126,7 +126,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 0.2rem;
+  gap: 0.1rem;
 }
 
 @media (max-width: 1024px) {
@@ -141,5 +141,10 @@
 
   .daily-temp-feels {
     margin-bottom: 0;
+  }
+
+  .daily-rain {
+    justify-content: flex-start;
+    width: 5rem;
   }
 }
