--- a/src/styles/dashboards.css
+++ b/src/styles/dashboards.css
@@ -44,11 +44,11 @@
 
 @media (max-width: 768px) {
   .current-dashboard-container {
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.3rem;
     padding: 0;
-    gap: 0.2rem;
+    gap: 0.3rem;
 
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
   }
 }
@@ -97,13 +97,12 @@
 }
 
 .current-info {
+  font-size: 1.2rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 0.6rem;
-
-  font-size: 1.2rem;
+  gap: 0;
 }
 
 .current-location {
